--- a/src/main/webapp/live.html
+++ b/src/main/webapp/live.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Language" content="zh-CN">
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+<meta charset=utf-8 />
 <title>fz-live</title>
   <link href="./css/video.css" rel="stylesheet">
   <script src="./js/video.js"></script>
